--- a/internet/css/main.css
+++ b/internet/css/main.css
@@ -1,4 +1,5 @@
 :root {
+    --white: rgb(255, 255, 255);
     --light: rgb(207, 213, 235);
      /* #cfd5eb; */
     --dark: rgb(40, 22, 111);
@@ -21,8 +22,8 @@
     box-sizing: border-box;
 }
 body {
-    background-color: rgb(207, 213, 235);
+    background:var(--light);
 }
 header {
-    background-color: #fff;
+    background: var(--white);
 }
